修改put和delete接口为RESTFUL
