# docs/swagger.yaml
@@ -11,39 +11,6 @@ info:
   contact: {}
 paths:
   /api/v1/tags:
-    delete:
-      parameters:
-      - description: Id
-        in: formData
-        name: id
-        required: true
-        type: integer
-      - description: Name
-        in: formData
-        name: name
-        required: true
-        type: string
-      - description: token
-        in: header
-        name: token
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/gin_http.ResponseJSON'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/gin_http.ResponseJSON'
-        "10008":
-          description: ""
-          schema:
-            $ref: '#/definitions/gin_http.ResponseJSON'
-      summary: 删除文章标签
     get:
       parameters:
       - description: Page
@@ -94,10 +61,44 @@ paths:
           schema:
             $ref: '#/definitions/gin_http.ResponseJSON'
       summary: 新增标签
+  /api/v1/tags/{id}:
+    delete:
+      parameters:
+      - description: ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Name
+        in: formData
+        name: name
+        required: true
+        type: string
+      - description: token
+        in: header
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/gin_http.ResponseJSON'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/gin_http.ResponseJSON'
+        "10008":
+          description: ""
+          schema:
+            $ref: '#/definitions/gin_http.ResponseJSON'
+      summary: 删除文章标签
     put:
       parameters:
-      - description: Id
-        in: formData
+      - description: ID
+        in: path
         name: id
         required: true
         type: integer
